test: build a Predecessor-ordered corpus into the warm-up ingest benchmark
Both end-to-end overhead figures the always-on decision rests on - +2.17 % from the reference
corpus and +2.34 % from the synthetic price- and validity-heavy one - were measured on
catalogues that build no ChainIndex at all. They therefore said nothing about the structure
family whose per-slot conversion was the largest of the four, and whose instance count
multiplies with catalogue shape exactly like the price indexes do.

WarmUpAtomicityIngestBenchmark gains a --chains flag, on by default, that gives PRODUCT an
`order` attribute of type Predecessor forming one chain the length of the collection. It is
wired through DataGenerator's ENTITY-attribute value generator with an external ordinal
counter; the reference-attribute overload (BiFunction<ReferenceKey, Faker, Object>) never
sees the generated entity's primary key and cannot express a chain at all, which is what
made this look impossible when the corpus was first scoped.

verifyChain fails the run when the chain does not read back as one unbroken run, because
the ordinal-equals-primary-key assumption it relies on is a property of how this program is
arranged rather than anything the engine enforces. A broken numbering does not fail an
ingest: the chain fragments into runs the index parks in a side map and never writes to the
paged lookup tree, understating the very cost the corpus exists to measure while every
count check still passes.

Measured on 50 000 products, seed 42, four passes with the first discarded, both arms taken
from one source state: 26.05 -> 27.12 s ingest CPU, +4.11 %, against +2.34 % for the same
corpus without the chain. Still inside the 5 % budget the always-on decision was taken
against, on about a third of the margin that decision implied.

The usage javadoc records the --add-opens flags the run needs; without them Byte Buddy
proxy generation dies on the first entity. WarmUpSavepointStructureCostBenchmark's class
jav